<resources>
    <string name="app_name">ODHA</string>
    <string name="contact_us_button">Contact Us</string>
    <string name="about_us_button">About ODHA</string>
    <string name="news_button">News</string>
    <string name="website">ODHA Website</string>
    <string name="odha_mission">ODHA Mission Statement</string>
    <string name="odha_mission_text">To improve the public\'s total health, the mission of the Oregon Dental Hygienists\' Association is to advance the art and science of dental hygiene by ensuring access to quality oral health care, increasing awareness of the cost-effective benefits of prevention, promoting the highest standards of dental hygiene education, licensure, practice and research, and representing and promoting the interests of dental hygienists.</string>
    <string name="odha_goals">ODHA Goals</string>
    <string name="odha_goals_text">The dental hygiene community will understand the value of ODHA membership and choose to belong.  ODHA will be the recognized community and resource for dental hygiene.  ODHA and its members will work in partnership with dentists and other stakeholders to advance oral health.  The dental hygiene profession will advance through effective advocacy by ODHA. ODHA will be a data-driven, fiscally sound, effectively governed organization.</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="contact_us_description">Would you like to get in touch with ODHA? There are many different ways you can connect with us. From this page you can find us on Twitter, Facebook, and Instagram as well as send us an email. </string>
</resources>
