<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="org.odha.adhaoregon.HomeActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/adha_oregon_logo_trasnparent"
                android:adjustViewBounds="true"
                android:padding="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView android:id="@+id/odha_website_button"
                    style="@style/app_buttons"
                    android:text="@string/website"
                    android:layout_weight="1" />

                <TextView android:id="@+id/about_odha_button"
                    style="@style/app_buttons"
                    android:text="@string/about_us_button"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView android:id="@+id/news_button"
                    style="@style/app_buttons"
                    android:text="@string/news_button"
                    android:layout_weight="1" />

                <TextView android:id="@+id/contact_us_button"
                    style="@style/app_buttons"
                    android:text="@string/contact_us_button"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
